--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-polyfill": "^6.26.0",
     "clipboard": "^2.0.6",
     "echarts": "^4.2.1",
+    "el-table-virtual-scroll": "^2.0.2",
     "element-ui": "^2.12.0",
     "google-maps": "^3.3.0",
     "js-cookie": "2.2.0",
